# shopping-list

./: .gitignore  Dockerfile  app.py  claude.py  docker-compose.yml  generate_measurements.py  measurements.py  models.py  prep_schedule.py  pyproject.toml  read.ipynb  shopping_list.py  utils.py
recipes/: beef_ragu_pasta.json  chicken_larb.json  mushroom_risotto.json  nicoise_salad.json  potato_leek_soup.json
recipes/week_6/: beef_with_broccoli.json  chicken_cacciatore.json  meatball_pho.json  pork_cotoletta.json  swedish_meatballs.json
recipes/week_7/: cauliflower_paneer_pea_curry.json  chicken_ramen.json  meatloaf.json  pork_stir_fry.json  thai_pork_curry.json
recipes/week_8/: beef_chow_mein.json  chicken_laksa.json  sweet_and_sour_chicken.json  teriyaki_beef.json  thai_beef_salad.json
